updates to S04, added S05

--- a/S04_models.qmd
+++ b/S04_models.qmd
@@ -354,8 +354,54 @@ Use the [iterations tutorial](https://bigelowlab.github.io/handytandy/iterations
 ```{r my_loop}
 for (month in month.abb){
   
+greedy_model_input = read_model_input(approach = "greedy", mon = month)
+cfg = read_configuration(version = sprintf("g_%s", month))
+db = brickman_database()
+covars = read_brickman(db |> filter(scenario == "PRESENT", interval == "mon"))|>
+  select(all_of(cfg$keep_vars))
   
-  
+greedy_all_data = prep_model_data(greedy_model_input, 
+                           month = month,
+                           covars = covars, 
+                           form = "table") |>
+  select(all_of(c("class", cfg$keep_vars)))
+
+greedy_split_data = initial_split(greedy_all_data, 
+                           prop = 3/4,
+                           strata = class)
+
+tr_data = training(greedy_split_data)
+
+wflow = workflow()
+rec = recipe(class ~ ., data = slice(tr_data,1))
+
+rec = rec |> 
+  step_naomit()
+if ("depth" %in% cfg$keep_vars){
+  rec = rec |>
+    step_log(depth,  base = 10)
+}
+if ("Xbtm" %in% cfg$keep_vars){
+  rec = rec |>
+    step_log(Xbtm,  base = 10)
+}
+
+# rec = rec |> 
+#   step_corr(all_numeric_predictors())
+
+wflow = wflow |>
+  add_recipe(rec)
+
+model = rand_forest() |>
+  set_mode("classification") |>
+  set_engine("ranger", probability = TRUE, importance = "permutation") 
+
+wflow = wflow |>
+  add_model(model)
+
+fitted_wflow = fit(wflow, data = tr_data)
+
+write_workflow(fitted_wflow, version = cfg$version)
 }
 ```
 
